--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -8227,8 +8227,7 @@
         <div
           *ngIf="
             dataReporteSemanal?.seguimientoSemanalGestionObra?.length > 0 &&
-            dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAlerta[0].seguimientoSemanalGestionObraAmbiental[0]
-              .seEjecutoGestionAmbiental == true
+            dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAmbiental[0].seEjecutoGestionAmbiental == true
           "
         >
           x
@@ -8257,7 +8256,7 @@
         <div
           *ngIf="
             dataReporteSemanal?.seguimientoSemanalGestionObra.length > 0 &&
-            dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAlerta[0].seguimientoSemanalGestionObraAmbiental[0]
+            dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAmbiental[0]
               .seEjecutoGestionAmbiental == false
           "
         >
@@ -8269,7 +8268,7 @@
     <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt"
       *ngIf="
         dataReporteSemanal?.seguimientoSemanalGestionObra.length > 0 &&
-        dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAlerta[0].seguimientoSemanalGestionObraAmbiental[0]
+        dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAmbiental[0]
           .seEjecutoGestionAmbiental == false
       "
     >
@@ -8296,7 +8295,7 @@
       style="mso-height-source: userset; height: 13.2pt"
       *ngIf="
         dataReporteSemanal?.seguimientoSemanalGestionObra.length > 0 &&
-        dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAlerta[0].seguimientoSemanalGestionObraAmbiental[0]
+        dataReporteSemanal?.seguimientoSemanalGestionObra[0].seguimientoSemanalGestionObraAmbiental[0]
           .seEjecutoGestionAmbiental == true
       "
     >
