--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -7330,8 +7330,8 @@
       >
         Desv.
       </td>
-      <td class="xl211" colspan="12" style="border-right: 0.5pt solid black;" [attr.rowspan]="avanceFisico.length + 2">
-        <img *ngIf="avanceFisicoGrafica" [src]="avanceFisicoGrafica" alt="Avance Fisico Grafica" style="width: 97%; margin: 1em;">
+      <td class="xl211" colspan="12" style="border-right: 0.5pt solid black; text-align: center;" [attr.rowspan]="avanceFisico.length + 2">
+        <img *ngIf="avanceFisicoGrafica" [src]="avanceFisicoGrafica" alt="Avance Fisico Grafica" style="width: 500px; margin: 1em;">
       </td>
     </tr>
     <tr class="xl89" style="height: 13.2pt" *ngFor="let avance of avanceFisico; let i = index">
