--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -7485,8 +7485,8 @@
       <td class="xl235" style="border-top: 0px">&nbsp;</td>
       <td class="xl235" style="border-top: 0px">&nbsp;</td>
       <td class="xl235" style="border-top: 0px" colspan="6">&nbsp;</td>
-      <td class="xl211" colspan="12" style="border-right: 0.5pt solid black;" [attr.rowspan]="dataReporteSemanal?.seguimientoFinanciero?.length + 7">
-        <img *ngIf="seguimientoFinancieroGrafica" [src]="seguimientoFinancieroGrafica" alt="Seguimiento Financiero Grafica" style="width: 97%; margin: 1em;">
+      <td class="xl211" colspan="12" style="border-right: 0.5pt solid black; text-align: center;" [attr.rowspan]="dataReporteSemanal?.seguimientoFinanciero?.length + 7">
+        <img *ngIf="seguimientoFinancieroGrafica" [src]="seguimientoFinancieroGrafica" alt="Seguimiento Financiero Grafica" style="width: 500px; margin: 1em;">
       </td>
     </tr>
     <tr class="xl81" height="31" style="height: 23.4pt">
