--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/soporte-project/soporte-project.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/soporte-project/soporte-project.component.html
@@ -32,7 +32,8 @@
     class="btn-guardar"
     type="button"
     [disabled]="documentFile.invalid"
+    (click)="guardar()"
   >
-    <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+    <img src="assets/img/icon/guardar.svg" alt="guardar" />
   </button>
 </div>
