--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -62,7 +62,9 @@
                         </mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
-                        <section></section>
+                        <section class="text-left">
+                            <div [innerHTML]="seguimientoSemanal.seguimientoSemanalAvanceFisico[0].observaciones"></div>
+                        </section>
                     </mat-card-content>
                 </mat-card>
               </div>
