--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -53,7 +53,10 @@
       </app-tabla-avance-fisico>
     </mat-expansion-panel>
 
-    <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel
+      class="expansion-style sub-expansion"
+      *ngIf="seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal'"
+    >
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAvanceFisico">
           Observaciones
@@ -70,7 +73,10 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <app-soporte-project [pContratacionProyectoId]="pContratacionProyectoId"></app-soporte-project>
+      <app-soporte-project
+        [pContratacionProyectoId]="pContratacionProyectoId"
+        [seguimientoSemanal]="seguimientoSemanal"
+      ></app-soporte-project>
     </mat-expansion-panel>
   </mat-accordion>
 </section>
@@ -153,7 +159,7 @@
       </mat-expansion-panel-header>
 
       <div class="text-center">
-        <button mat-raised-button color="accent">Descargar soporte project</button>
+        <button mat-raised-button color="accent" (click)="descargarProject()">Descargar soporte project</button>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
