--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -47,7 +47,9 @@
             </app-tabla-avance-fisico>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="expansion-style sub-expansion">
+        <mat-expansion-panel class="expansion-style sub-expansion"
+            *ngIf="seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal'"
+        >
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
                     Observaciones
@@ -78,7 +80,7 @@
             </mat-expansion-panel-header>
 
             <div class="text-center">
-                <button mat-raised-button color="accent">Descargar soporte project</button>
+                <button mat-raised-button color="accent" (click)="descargarProject()">Descargar soporte project</button>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
