--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -66,8 +66,8 @@
             <ng-container matColumnDef="capitulo">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Capítulo </th>
               <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let capitulo of element.avancePorCapitulo">
-                  {{ capitulo.capitulo }}
+                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let capitulo of element.avancePorCapitulo2">
+                  {{ capitulo.programacion.actividad }}
                 </div>
               </td>
             </ng-container>
@@ -75,7 +75,7 @@
             <ng-container matColumnDef="programacionCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Programación por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
+                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let programacionCapitulo of element.avancePorCapitulo2">
                     <!-- {{ programacionCapitulo.programacionCapitulo }}% -->
 
                     <mat-form-field style="width: 3em;">
@@ -99,7 +99,7 @@
             <ng-container matColumnDef="avanceFisicoCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;"> Avance físico por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
+                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo2">
                     <section class="d-flex justify-content-center">
                       <mat-form-field style="width: 3em;">
                           <input  matInput
@@ -204,8 +204,8 @@
       <ng-container matColumnDef="capitulo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-          <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
-            {{ capitulo.capitulo }}
+          <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo2">
+            {{ capitulo.programacion.actividad }}
           </div>
         </td>
       </ng-container>
@@ -213,7 +213,7 @@
       <ng-container matColumnDef="programacionCapitulo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación por capítulo </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo2">
               {{ programacionCapitulo.programacionCapitulo }}%
             </div>
           </td>
@@ -222,7 +222,7 @@
       <ng-container matColumnDef="avanceFisicoCapitulo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;" class="back-color"> Avance físico por capítulo </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo2">
               {{ avanceFisicoCapitulo.avanceFisicoCapitulo }}%
             </div>
           </td>
