--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -7369,7 +7369,7 @@
           background: white;
         "
       >
-        {{ avance.programacion | currency: '':'symbol-narrow':'.0-0' }}
+        {{ avance.programacion }}%
       </td>
       <td
         colspan="4"
@@ -7388,7 +7388,7 @@
           width: 200pt;
         "
       >
-        {{ avance.ejectutado | currency: '':'symbol-narrow':'.0-0' }}
+        {{ avance.ejectutado }}%
       </td>
       <td
         colspan="3"
@@ -7428,7 +7428,7 @@
         class="xl89"
         style="height: 13.2pt"
       >
-        {{ sumaTotal | currency: '':'symbol-narrow':'.0-0' }}
+        {{ sumaTotal }}%
       </td>
       <td
         colspan="4"
