boton informe semanal

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
@@ -82,6 +82,7 @@
             color="accent"
             class="btn-table"
             [routerLink]="[ 'informeSemanal', 0, element.seguimientoSemanalId ]"
+            *ngIf="element.registroCompletoMuestra === true"
             >
             Informe Semanal
            </button>
