--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
@@ -101,14 +101,14 @@
                 [disabled]="permisos.tienePermisoLeer === false">
                 Consultar bitácora
         </button>
-        <a mat-raised-button
+        <!-- <a mat-raised-button
           color="accent"
           class="btn-table"
           
           [routerLink]="[ 'informeSemanal', element.contratacionProyectoId, element.seguimientoSemanalId ]"
         >
           Informe Semanal
-        </a>
+        </a> -->
 
       </td>
     </ng-container>
