--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -66,8 +66,8 @@
             <ng-container matColumnDef="capitulo">
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20"> Capítulo </th>
               <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let capitulo of element.avancePorCapitulo2">
-                  {{ capitulo.programacion.actividad }}
+                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let capitulo of element.avancePorCapitulo">
+                  {{ capitulo.capitulo }}
                 </div>
               </td>
             </ng-container>
@@ -75,7 +75,7 @@
             <ng-container matColumnDef="programacionCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Programación por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let programacionCapitulo of element.avancePorCapitulo2">
+                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
                     <!-- {{ programacionCapitulo.programacionCapitulo }}% -->
 
                     <mat-form-field style="width: 3em;">
@@ -83,12 +83,13 @@
                               type="number"
                               min="0"
                               maxlength="3"
-                              onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
+                              onKeyPress="if(this.value.length>=this.maxLength) this.value = ''; if (event.key === '-') this.value = ''"
                               max="100"
                               [(ngModel)]="programacionCapitulo.programacionCapitulo"
                               required
                               style="width: 2em;"
-                              (ngModelChange)="changeProgramacionCapitulo(element)">
+                              (ngModelChange)="changeProgramacionCapitulo(element)"
+                              oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                   </mat-form-field>
                   <span style="margin: .5em;">%</span>
                   <span class="contador" *ngIf="programacionCapitulo.programacionCapitulo">{{3 - textoLimpio( programacionCapitulo.programacionCapitulo ) }}</span>
@@ -99,20 +100,21 @@
             <ng-container matColumnDef="avanceFisicoCapitulo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;"> Avance físico por capítulo </th>
                 <td mat-cell *matCellDef="let element" align="center" class="padding-0em">
-                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo2">
+                  <div class="sub-item-table flex-table justify-content-center align-items-center h-3em" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
                     <section class="d-flex justify-content-center">
                       <mat-form-field style="width: 3em;">
                           <input  matInput
                                   type="number"
                                   min="0"
                                   maxlength="4"
-                                  onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
+                                  onKeyPress="if(this.value.length>=this.maxLength) this.value = ''; if (event.key === '-') this.value = ''"
                                   [max]="avanceFisicoCapitulo.programacionCapitulo"
                                   [(ngModel)]="avanceFisicoCapitulo.avanceFisicoCapitulo"
                                   required
                                   style="width: 2em;"
                                   autocomplete="off"
-                                  (ngModelChange)="valuePending( $event, avanceFisicoCapitulo )">
+                                  (ngModelChange)="valuePending( $event, avanceFisicoCapitulo )"
+                                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
                       </mat-form-field>
                       <span style="margin: .5em;">%</span>
                       <span class="contador" *ngIf="avanceFisicoCapitulo.avanceFisicoCapitulo">{{3 - textoLimpio( avanceFisicoCapitulo.avanceFisicoCapitulo ) }}</span>
@@ -204,8 +206,8 @@
       <ng-container matColumnDef="capitulo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Capítulo </th>
         <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-          <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo2">
-            {{ capitulo.programacion.actividad }}
+          <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let capitulo of element.avancePorCapitulo">
+            {{ capitulo.capitulo }}
           </div>
         </td>
       </ng-container>
@@ -213,7 +215,7 @@
       <ng-container matColumnDef="programacionCapitulo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Programación por capítulo </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo2">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let programacionCapitulo of element.avancePorCapitulo">
               {{ programacionCapitulo.programacionCapitulo }}%
             </div>
           </td>
@@ -222,7 +224,7 @@
       <ng-container matColumnDef="avanceFisicoCapitulo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;" class="back-color"> Avance físico por capítulo </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo2">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let avanceFisicoCapitulo of element.avancePorCapitulo">
               {{ avanceFisicoCapitulo.avanceFisicoCapitulo }}%
             </div>
           </td>
