--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/observaciones-detalle-avance/observaciones-detalle-avance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/observaciones-detalle-avance/observaciones-detalle-avance.component.html
@@ -47,7 +47,7 @@
         (onContentChanged)="maxLength($event, 1000)"
         formControlName="observaciones"
         #obsAvanceFisico
-        required
+        [required]="required"
       >
       </quill-editor>
     </div>
